@@ -889,14 +889,16 @@ FirebugService.prototype =
                     this.stopStepping();
                     return this.onBreak(frame, type, val);
                 }
+                else if (!(bp.type & BP_NORMAL) || bp.disabled & BP_NORMAL)
+                {
+                    return RETURN_CONTINUE;
+                }
                 else if (bp.type & BP_NORMAL)
                 {
                     var passed = testBreakpoint(frame, bp);
                     if (!passed)
                         return RETURN_CONTINUE;
                 }
-                else if (!(bp.type & BP_NORMAL) || bp.disabled & BP_NORMAL)
-                    return RETURN_CONTINUE;
             }
             else
                 return RETURN_CONTINUE;
@@ -2120,6 +2122,8 @@ var FirebugPrefsObserver =
             fbs.breakOnErrors =  prefs.getBoolPref("extensions.firebug.breakOnErrors");
         else if (data == "extensions.firebug.showEvalSources")
             fbs.showEvalSources =  prefs.getBoolPref("extensions.firebug.showEvalSources");
+        else if (data == "extensions.firebug.useFunctionSource")
+            fbs.useFunctionSource =  prefs.getBoolPref("extensions.firebug.useFunctionSource");
         else if (data == "extensions.firebug.DBG_FBS_CREATION")
             fbs.DBG_CREATION = prefs.getBoolPref("extensions.firebug.DBG_FBS_CREATION");
         else if (data == "extensions.firebug.DBG_FBS_BP")
